get_color_at_percentage.

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,13 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.utils import *\n",
-    "from src.services import *\n",
-    "\n"
+    "from src.services import *"
    ]
   },
   {
@@ -29,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-10-18 21:56:05.686\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.utils\u001b[0m:\u001b[36mopen_image_as_grayscale\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mOpening image from path: 1\u001b[0m\n",
-      "\u001b[32m2023-10-18 21:56:06.945\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.services\u001b[0m:\u001b[36mcalculate_co_occurrence_matrix\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1mCalculating co-occurrence matrix\u001b[0m\n",
-      "\u001b[32m2023-10-18 21:56:08.319\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.services\u001b[0m:\u001b[36mcalculate_contrast\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mCalculating contrast\u001b[0m\n"
+      "\u001b[32m2023-10-18 22:05:43.012\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.utils\u001b[0m:\u001b[36mopen_image_as_grayscale\u001b[0m:\u001b[36m12\u001b[0m - \u001b[1mOpening image from path: 1\u001b[0m\n",
+      "\u001b[32m2023-10-18 22:05:44.398\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.services\u001b[0m:\u001b[36mcalculate_co_occurrence_matrix\u001b[0m:\u001b[36m16\u001b[0m - \u001b[1mCalculating co-occurrence matrix\u001b[0m\n",
+      "\u001b[32m2023-10-18 22:05:45.323\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.services\u001b[0m:\u001b[36mcalculate_contrast\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mCalculating contrast\u001b[0m\n"
      ]
     },
     {
@@ -66,21 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-10-18 21:58:12.612\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.services\u001b[0m:\u001b[36mcalculate_image_histogram\u001b[0m:\u001b[36m55\u001b[0m - \u001b[1mCalculating histogram\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2023-10-18 21:58:12.892\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.utils\u001b[0m:\u001b[36mplot_histogram\u001b[0m:\u001b[36m53\u001b[0m - \u001b[1mPlotting histogram for image: 1\u001b[0m\n"
+      "\u001b[32m2023-10-18 22:05:45.452\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.services\u001b[0m:\u001b[36mcalculate_image_histogram\u001b[0m:\u001b[36m56\u001b[0m - \u001b[1mCalculating histogram\u001b[0m\n",
+      "\u001b[32m2023-10-18 22:05:45.975\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.utils\u001b[0m:\u001b[36mplot_histogram\u001b[0m:\u001b[36m53\u001b[0m - \u001b[1mPlotting histogram for image: 1\u001b[0m\n"
      ]
     },
     {
@@ -110,16 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-10-18 21:58:16.373\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.services\u001b[0m:\u001b[36mcalculate_cumulative_histogram\u001b[0m:\u001b[36m67\u001b[0m - \u001b[1mCalculating cumulative histogram\u001b[0m\n",
-      "\u001b[32m2023-10-18 21:58:16.375\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.services\u001b[0m:\u001b[36mcalculate_image_histogram\u001b[0m:\u001b[36m55\u001b[0m - \u001b[1mCalculating histogram\u001b[0m\n",
-      "\u001b[32m2023-10-18 21:58:16.699\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.utils\u001b[0m:\u001b[36mplot_histogram\u001b[0m:\u001b[36m53\u001b[0m - \u001b[1mPlotting histogram for image: 1 cumulative\u001b[0m\n"
+      "\u001b[32m2023-10-18 22:05:48.487\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.services\u001b[0m:\u001b[36mcalculate_cumulative_histogram\u001b[0m:\u001b[36m68\u001b[0m - \u001b[1mCalculating cumulative histogram\u001b[0m\n",
+      "\u001b[32m2023-10-18 22:05:48.492\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.utils\u001b[0m:\u001b[36mplot_histogram\u001b[0m:\u001b[36m53\u001b[0m - \u001b[1mPlotting histogram for image: 1 cumulative\u001b[0m\n"
      ]
     },
     {
@@ -143,8 +135,28 @@
     }
    ],
    "source": [
-    "cumulative = calculate_cumulative_histogram(matrix=matrix)\n",
+    "cumulative = calculate_cumulative_histogram(histogram)\n",
     "plot_histogram(cumulative, f'{image_num} cumulative')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4811, 3808)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_color_at_percentage(cumulative_histogram=cumulative, percentage=5)"
    ]
   },
   {
