download requiremnts commands.

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./download-images.sh"
+    "!./download-images.sh\n",
+    "%pip install -r requirements.txt"
    ]
   },
   {
